--- a/pinyougou-service/pinyougou-user-service/pom.xml
+++ b/pinyougou-service/pinyougou-user-service/pom.xml
@@ -13,4 +13,17 @@
     <!-- 指定端口号 -->
     <port>9005</port>
   </properties>
+  <dependencies>
+  <dependency>
+    <groupId>com.aliyun</groupId>
+    <artifactId>aliyun-java-sdk-core</artifactId>
+    <version>3.2.8</version>
+  </dependency>
+  <dependency>
+    <groupId>com.aliyun</groupId>
+    <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+    <version>1.1.0</version>
+  </dependency>
+  </dependencies>
+
 </project>
