舔狗模块第一次试验成功

--- a/pinyougou-web/pinyougou-user-web/src/main/webapp/WEB-INF/web.xml
+++ b/pinyougou-web/pinyougou-user-web/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,6 @@
 	</filter-mapping>
 
 	<welcome-file-list>
-		<welcome-file>home-index.html</welcome-file>
+		<welcome-file>home-order-pay.html</welcome-file>
 	</welcome-file-list>
 </web-app>
